# AmigaGfxSuite

./: .gitmodules  CMakeLists.txt  README.md
AmigaGfxLib/: CMakeLists.txt  README.MD
AmigaGfxLib/docs/: Doxyfile
AmigaGfxLib/inc/: AmigaGfxLib.h
AmigaGfxLib/inc/Modules/ErrorHandling/: ErrorHandler.h  Errors.h
AmigaGfxLib/inc/Modules/FileHandling/: FileManager.h
AmigaGfxLib/inc/Modules/Logging/: Logger.h
AmigaGfxLib/inc/Modules/Utilities/: StatusCtrl.h  Tools.h
AmigaGfxLib/src/Modules/ErrorHandling/: ErrorHandler.cpp
AmigaGfxLib/src/Modules/FileHandling/: FileManager.cpp
AmigaGfxLib/src/Modules/Logging/: Logger.cpp
AmigaGfxLib/src/Modules/Utilities/: StatusCtrl.cpp  Tools.cpp
AmigaPaletteMerge/: CMakeLists.txt  README.md
AmigaPaletteMerge/docs/: Doxyfile
AmigaPaletteMerge/src/: main.cpp
AmigaSpriteCompress/: CMakeLists.txt  README.md
AmigaSpriteCompress/docs/: Doxyfile
AmigaSpriteCompress/src/: main.cpp
Files/: SPRITE-0001.png.RAW  Sprite-0001.aseprite
TestAmigaGfxLib/: CMakeLists.txt
TestAmigaGfxLib/docs/: Doxyfile
TestAmigaGfxLib/src/: unitTests.cpp
TestAmigaPaletteMerge/: CMakeLists.txt  README.md
TestAmigaSpriteCompress/: CMakeLists.txt  README.md
TestAmigaSpriteCompress/docs/: Doxyfile
TestAmigaSpriteCompress/src/: unitTests.cpp
